--- a/anime-site/Views/Home/Dashboard.cshtml
+++ b/anime-site/Views/Home/Dashboard.cshtml
@@ -15,9 +15,23 @@
 <h1 class="dash-title">Top suggestions for you</h1>
 <div class="rec-container">
 
-    <img class="rec-img" src="@ViewBag.Rec5" />
-    <img class="rec-img" src="@ViewBag.Rec4" />
-    <img class="rec-img" src="@ViewBag.Rec1" />
-    <img class="rec-img" src="@ViewBag.Rec2" />
-    <img class="rec-img" src="@ViewBag.Rec3" />
+    <img class="rec-img" src="@ViewData["Rec5"]" />
+    <img class="rec-img" src="@ViewData["Rec4"]" />
+    <img class="rec-img" src="@ViewData["Rec1"]" />
+    <img class="rec-img" src="@ViewData["Rec2"]" />
+    <img class="rec-img" src="@ViewData["Rec3"]" />
+</div>
+
+<div class="add-container">
+
+    <img class="more-img" src="@ViewData["Rec6"]" />
+    <img class="more-img" src="@ViewData["Rec7"]" />
+    <img class="more-img" src="@ViewData["Rec8"]" />
+    <img class="more-img" src="@ViewData["Rec9"]" />
+    <img class="more-img" src="@ViewData["Rec10"]" />
+    <img class="more-img" src="@ViewData["Rec11"]" />
+    <img class="more-img" src="@ViewData["Rec12"]" />
+    <img class="more-img" src="@ViewData["Rec13"]" />
+    <img class="more-img" src="@ViewData["Rec14"]" />
+    <img class="more-img" src="@ViewData["Rec15"]" />
 </div>
