--- a/anime-site/Views/Home/Index.cshtml
+++ b/anime-site/Views/Home/Index.cshtml
@@ -4,7 +4,6 @@
 
 <body>
     <div class = "home-background">
-
         <main class="home-position">
             <p class="home-title">Anime Recommendation Center</p>
             <container class="home-container">
@@ -12,11 +11,10 @@
                     @Html.ActionLink("Login", "Login", "UserAccount", new { area = "" }, new { @class = "login-pill" })
                 </div>
                 <div class="home-button">
-                    @Html.ActionLink("Register", "Register", "USerAccount", new { area = "" }, new { @class = "reg-pill" })
+                    @Html.ActionLink("Register", "Register", "UserAccount", new { area = "" }, new { @class = "reg-pill" })
                 </div>
             </container>
-
-
         </main>
         </div>
 </body>
+
